--- a/styles.css
+++ b/styles.css
@@ -1,22 +1,31 @@
 .father {
   /* width: 100%; */
-  height: 900px;
+  /* height: 600px; */
   /* background-color: rgb(206, 15, 15); */
-  border: 30% black solid;
+  border: 2px solid;
+  /* width: 80%; */
   /* display: flex;
   justify-content: center; */
-  background-color: blueviolet;
+  background-color: whitesmoke;
+  /* padding: 30px; */
+  margin-left: 30%;
+  margin-right: 30%;
+  padding-bottom: 30px;
 }
 
-.cebolla {
-  background-color: red;
-  margin-top: 50px;
+.tareas {
+  /* background-color: red; */
+  /* margin-top: 50px; */
   display: flex;
   justify-content: center;
 }
 
+/* .boton {
+  margin-top: 20px;
+} */
+
 .button {
-  width: 80px;
+  /* width: 80px; */
   /* height: 10px; */
   background-color: blue;
   color: aliceblue;
@@ -24,16 +33,58 @@
 
 .contenedor {
   display: flex;
-  justify-content: space-between;
-  background-color: blue;
-  align-items: center;
+  justify-content: space-around;
+  /* background-color: blue; */
+  /* align-items: center; */
+  align-items: flex-end;
 }
 
 .circulo {
-  background-color: white;
-  width: 100px;
+  background-color: rgb(0, 0, 0);
+  /* width: 100px; */
   height: 100px;
   border-radius: 50%;
+  /* align-items: flex-end; */
 }
-.secundario {
+
+.barra {
+  background-color: blanchedalmond;
+  padding: 5px;
+  display: flex;
+  /* flex-direction: row; */
+}
+
+.contenedorPuntos {
+  /* background-color: yellow; */
+  padding: 5px;
+  display: flex;
+}
+
+.circulitos {
+  background-color: goldenrod;
+  padding: 8px;
+  margin: 10px;
+  border-radius: 100%;
+}
+.container {
+  border: 2px solid;
+  height: 300px;
+  margin: 20px;
+  /* width: 94%; */
+}
+#resultado {
+  /* padding: 5px 15px;
+  border: none;
+  color: white;
+  font-family: fantasy;
+  background-color: rgb(7, 253, 253);
+  font-size: 1.4rem;
+  outline: none;
+  margin: 5px; */
+  border: 2px solid;
+  padding: 10px;
+  margin: 10px;
+}
+.img {
+  background-image: url(https://cdn.pixabay.com/photo/2018/04/24/05/34/animal-3346331_1280.png);
 }
