--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@
   /* width: 80%; */
   /* display: flex;
   justify-content: center; */
-  background-color: whitesmoke;
+  background-color: antiquewhite;
   /* padding: 30px; */
   margin-left: 30%;
   margin-right: 30%;
@@ -40,15 +40,19 @@
 }
 
 .circulo {
-  background-color: rgb(0, 0, 0);
+  display: flex;
+  align-items: center;
+  justify-content: center;
   /* width: 100px; */
   height: 100px;
+  width: 100px;
   border-radius: 50%;
+  border: 2px solid;
   /* align-items: flex-end; */
 }
 
 .barra {
-  background-color: blanchedalmond;
+  background-color: gray;
   padding: 5px;
   display: flex;
   /* flex-direction: row; */
@@ -68,7 +72,7 @@
 }
 .container {
   border: 2px solid;
-  height: 300px;
+  /* height: 300px; */
   margin: 20px;
   /* width: 94%; */
 }
@@ -81,10 +85,42 @@
   font-size: 1.4rem;
   outline: none;
   margin: 5px; */
-  border: 2px solid;
-  padding: 10px;
-  margin: 10px;
+  /* max-width: 50%;
+  min-height: 50%; */
+  /* border: 2px solid; */
+  /* display: flex; */
+  padding-bottom: 30%;
+  justify-content: space-between;
+  /* border: 2px solid black; */
+  /* padding: 10px;
+  margin: 10px; */
+  background-color: white;
 }
 .img {
-  background-image: url(https://cdn.pixabay.com/photo/2018/04/24/05/34/animal-3346331_1280.png);
+  background-image: url(https://cdn.pixabay.com/photo/2015/02/24/15/41/wolf-647528_1280.jpg);
+}
+
+.btn-delete {
+  margin-left: auto;
+  border: none;
+  background-color: #e31746;
+  color: white;
+  font-weight: bold;
+  padding: 5px 10px;
+  outline: none;
+  border-top-right-radius: 30px;
+  border-bottom-right-radius: 30px;
+  width: 30%;
+  font-size: 1.2em;
+}
+
+.tarea {
+  display: flex;
+  padding: 20px;
+  border: 2px solid;
+  margin: 10px 10px 10px 10px;
+  background-color: gray;
+}
+li {
+  list-style: none;
 }
